--- a/Social_Media_Project_R_Matt.Rmd
+++ b/Social_Media_Project_R_Matt.Rmd
@@ -196,13 +196,13 @@ FNR_sfc
 ```{r}
 #### Model Training 
 set.seed(123)
-cart_tree_1 = rpart(adopter ~.,data = train_hn_final, method = "class", cp = 0.0008)
+cart_tree_1 = rpart(adopter ~ age + male + avg_friend_age + friend_country_cnt + subscriber_friend_cnt + songsListened + lovedTracks + playlists,data = train_hn_final, method = "class", cp = 0.0008)
 prp(cart_tree_1)
 ```
 
 ```{r}
 CART_importance_scores = cart_tree_1$variable.importance
-n_variables = 12 # how many variables to display
+n_variables = 7 # how many variables to display
 barplot( tail( sort(CART_importance_scores), n_variables ),
          beside = TRUE,
          horiz = TRUE,
@@ -211,17 +211,31 @@ barplot( tail( sort(CART_importance_scores), n_variables ),
          cex.names =.7)
 ```
 
+```{r}
+
+```
+
+
 
 #### Random Forest
 
 ```{r}
-#### This can take a minute or two
-train_hn_final$adopter <- factor(train_hn_final$adopter)
-set.seed(51)
-rf_model <- train(adopter ~ ., data = train_hn_final, method = 'rf', trControl = trainControl(method = 'cv', number = 5))
+output.forest <- randomForest(adopter ~ age + male + avg_friend_age + friend_country_cnt + subscriber_friend_cnt + songsListened + lovedTracks + playlists, data = train_hn_final)
 ```
 
 ```{r}
-prp(rf_model)
+print(output.forest)
+```
+
+```{r}
+RF_importance_scores = output.forest$importance[,1]
+n_variables = 8 # how many variables to display?
+barplot( tail( sort(RF_importance_scores), n_variables ),
+         beside = TRUE,
+         horiz = TRUE,
+         las=1,
+         main = paste("Random Forest - top", n_variables, "importance scores"),
+         cex.names =.7)
+
 ```
 
